src/objects/Currency_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF( 
  AND(
   NOT(ISNULL(Expiration_Date__c)),
   Expiration_Date__c  &gt; TODAY())
,True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <label>Conversion Rate</label>
        <precision>5</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency_Abbreviation__c</fullName>
        <label>Currency Abbreviation</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OldSalesforceID__c</fullName>
        <externalId>true</externalId>
        <label>OldSalesforceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Rate_Abbreviation__c</fullName>
        <label>Tax Rate Abbreviation</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <inlineHelpText>Tax Rate represented as a whole number.</inlineHelpText>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <label>Currency Detail</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>NAME</columns>
        <columns>Conversion_Rate__c</columns>
        <columns>Currency_Abbreviation__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Tax_Rate__c</columns>
        <columns>Tax_Rate_Abbreviation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>equals</operation>
            <value>3/31/2018</value>
        </filters>
        <label>Active last month</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Conversion_Rate__c</columns>
        <columns>Currency_Abbreviation__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Tax_Rate__c</columns>
        <columns>Tax_Rate_Abbreviation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Countries_Where_We_Charge_Tax</fullName>
        <columns>NAME</columns>
        <columns>Tax_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tax_Rate__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>USD</value>
        </filters>
        <label>Countries Where We Charge Tax</label>
    </listViews>
    <listViews>
        <fullName>States_We_Charge_Tax_On</fullName>
        <columns>NAME</columns>
        <columns>Tax_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tax_Rate__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>USD</value>
        </filters>
        <label>States Where We Charge Tax</label>
    </listViews>
    <nameField>
        <label>Currency Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currency Details</pluralLabel>
    <recordTypes>
        <fullName>Conversion_Record_Type</fullName>
        <active>false</active>
        <label>Conversion Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tax_Record_Type</fullName>
        <active>false</active>
        <label>Tax Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>